基于OpenJDK8环境，其余JDK未做验证，如-Djava.ext.dirs=lib等参数和JDK版本有关，注意对应调整